<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Shortcut</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_sms">SendSMS</string>
    <string name="phones">Phones:</string>
    <string name="smsMessage">SMS Message</string>
    <string name="save">Save</string>
    <string name="to">To....</string>
    <string name="add">Add</string>
    <string name="addTemplate">Add template</string>
    <string name="templateName">Template name</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="URL"><a href="http://www.google.com">Google111</a></string>

</resources>
