<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.exclus.smsshortcut.app.MainActivity">

  <View android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"/>

  <AutoCompleteTextView
      android:id="@+id/phoneInputBox"
      android:hint="@string/to"
      android:layout_width="200dp"
      android:layout_height="45dp"
      android:layout_toRightOf="@id/strut"
      android:layout_alignParentLeft="true"
      android:layout_toLeftOf="@+id/addButton"/>

  <Button
      android:id="@+id/addButton"
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:onClick="addPhoneButtonClicked"
      android:text="@string/add" />

  <TextView
      android:id="@+id/phonesText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/phoneInputBox"
      android:text="@string/phones"/>

  <RelativeLayout
                  android:id="@+id/smsContainer"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="bottom"
                  android:layout_alignParentBottom="true">
    <EditText
        android:id="@+id/smsMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/smsMessage"/>

    <View android:id="@+id/strut1"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_below="@id/smsMessage"
          android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/templateName"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/smsMessage"
        android:layout_alignParentLeft="true"

        android:hint="@string/templateName"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/smsMessage"
        android:layout_alignParentRight="true"
        android:onClick="saveSMSTemplateClicked"
        android:text="@string/save" />
  </RelativeLayout>

  <RelativeLayout
      android:id="@+id/listViewContainer"
      android:layout_below="@id/phonesText"
      android:layout_above="@id/smsContainer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <ListView android:id="@+id/phonesListView"

              android:layout_height="wrap_content"
              android:longClickable="true"
              android:layout_width="match_parent"/>
  </RelativeLayout>
</RelativeLayout>
